序文を追加し、PCP定理に関する内容を記述

--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \begin{document}
 \maketitle
 \tableofcontents
-%\input{preface.tex}
+\input{preface.tex}
 %\addcontentsline{toc}{chapter}{Preface}
 \input{error-correcting code.tex}
 \input{expander graph.tex}
