--- a/preface.tex
+++ b/preface.tex
@@ -1,1 +1,3 @@
 \chapter*{序文}
+
+このノートは、PCP定理とその証明についての講義ノートです。PCP定理は、計算複雑性理論において、多くの問題において、計算量の上界と下界が一致することを示すための基本的な道具となっています。このノートでは、PCP定理の証明を、その背後にある概念を丁寧に説明しながら、できるだけ初等的に説明します。また、PCP定理の証明を理解するために必要な基本的な概念についても解説します。
