--- a/main.tex
+++ b/main.tex
@@ -47,10 +47,10 @@
 \tableofcontents
 \input{preface.tex}
 %\addcontentsline{toc}{chapter}{Preface}
-\input{error-correcting code.tex}
-\input{expander graph.tex}
-\input{HDX.tex}
-\input{matroid.tex}
+%\input{error-correcting code.tex}
+%\input{expander graph.tex}
+%\input{HDX.tex}
+%\input{matroid.tex}
 \printbibliography
 \appendix
 \input{appendix.tex}
