新しい章「エクスパンダーグラフ」、「ギャップ増幅補題」、「アルファベット削減」を追加し、導入章を更新してPCP定理に関する内容を記述。目次を更新。

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,1 +1,24 @@
-\chapter{PCP定理とは何か}
+\chapter{導入}
+
+この集中講義ではPCP定理と呼ばれる計算量理論の基本的な結果について解説し, その証明を与える.
+PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
+この証明は代数的な手法に基づく誤り訂正符号を技巧的に組合せたものであり, 難解なものであったが, その後\citet{Din07}によってより簡潔な証明が与えられた.
+この講義では\citet{Din07}による比較的簡単な証明を紹介する.
+ちなみにDinurはのちにこの業績によりゲーデル賞を受賞している.
+
+\section{検証能力}
+\subsection{クラスNP}
+\subsection{クラスAM}
+\subsection{クラスPCP}
+
+\section{PCP定理}
+
+\subsection{自明な例}
+
+\begin{theorem}{PCP定理}{PCPtheorem}
+  ...
+\end{theorem}
+
+
+\section{制約充足問題(CSP)}
+\subsection{充足可能性判定問題(SAT)}
