--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,8 @@
 \maketitle
 \tableofcontents
 \input{preface.tex}
-%\addcontentsline{toc}{chapter}{Preface}
+\addcontentsline{toc}{chapter}{Preface}
+\input{introduction.tex}
 %\input{error-correcting code.tex}
 %\input{expander graph.tex}
 %\input{HDX.tex}
