新しい章「制約充足問題」、「ギャップ増幅補題」、「アルファベット削減」を追加し、PCP定理に関する内容を詳述。目次を更新し、関連するファイルを追加・修正。

--- a/commands.tex
+++ b/commands.tex
@@ -11,6 +11,8 @@
 \DeclareMathOperator*{\Epi}{\mathbf{E}_{\pi}}
 \DeclareMathOperator*{\Varpi}{\mathbf{Var}_{\pi}}
 
+\newcommand{\Ver}{\mathrm{Ver}}
+
 \newcommand{\indicator}[1]{\mathbf{1}_{#1}}
 \newcommand{\condition}{\;\middle\vert\;}
 \newcommand{\tand}{\text{ and }}
@@ -19,7 +21,7 @@
 
 \newcommand{\e}{\mathrm{e}}
 \DeclareMathOperator*{\E}{\mathbb{E}}
-\DeclareMathOperator*{\Var}{\mathbb{Var}}
+\DeclareMathOperator*{\Var}{\mathbf{Var}}
 \newcommand{\dtv}{d_{\mathrm{TV}}}
 \newcommand{\vG}{\vec{G}}
 \newcommand{\tmix}{t_{\mathrm{mix}}}
