--- a/gap_amplification.tex
+++ b/gap_amplification.tex
@@ -1,1 +1,6 @@
-\chapter{ギャップ増幅補題}
+\chapter{ギャップ増幅補題} \label{chap:gap-amplification}
+この章ではPCP定理の証明において重要な役割を果たすギャップ増幅補題について解説する.
+\section{主張と直感}
+\section{証明}
+\subsection{構成}
+\subsection{正当性の証明}
