--- a/introduction.tex
+++ b/introduction.tex
@@ -6,10 +6,63 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 この講義では\citet{Din07}による比較的簡単な証明を紹介する.
 ちなみにDinurはのちにこの業績によりゲーデル賞を受賞している.
 
-\section{検証能力}
-\subsection{クラスNP}
-\subsection{クラスAM}
-\subsection{クラスPCP}
+\section{計算量理論の最低限の基礎}
+まずは計算量理論のどの教科書にも載っているような基礎的な用語の定義を与える.
+なお, このノートではアルゴリズムの定義 (チューリング機械の定義) は省略し, アルゴリズムについて述べる際は具体的な計算の手続きを述べる\footnote{word RAMモデルと呼ばれる計算モデルを主に考えるが, 
+ひとまずPythonやC言語などで実装されたプログラムを考えれば良い. また, 厳密には算術演算にかかるコストなど細かい点も考慮して計算量を議論すべきなのだが, この講義では多項式時間で実行できるかどうかが主な焦点なので, そのような細かいの議論は省略する.}.
+
+まずは基本的な記号の定義を与える:
+\begin{itemize}
+\item $\binset^*=\bigcup_{n\in\Nat}\binset^n$を有限長の二進文字列全体とする.
+\item $x\in\binset^*$に対して$\abs{x}$を$x$の文字数とする.
+\item アルゴリズム$A$に対し, $A(x)$を入力$x \in \binset^*$に対するアルゴリズム$A$の出力とする. ここで, 単に「アルゴリズム」と言った場合は決定的アルゴリズムを指し, 乱択アルゴリズムについては明示的に言及する.
+\item 関数$T(n)\colon\Nat\to\Nat$を考える. 十分大きな全ての$n\in\Nat$と全ての$x\in\binset^n$に対して, $A$が$A(x)$を出力するまでにかかる計算ステップ数の最大値が高々$T(n)$であるとき, アルゴリズム$A$の計算量は$T(n)$であるという.
+\end{itemize}
+
+PCP定理では主に判定問題と呼ばれる次のような問題を考える:
+
+\begin{definition}{判定問題}{decision-problem}
+  部分集合$L\subseteq\binset^*$を\emph{判定問題(または言語)}という.
+  また, 文字列$x\in\binset^*$は$x\in L$であるとき, 判定問題$L$の\emph{Yesインスタンス}といい,
+  そうでない場合は\emph{Noインスタンス}という.
+
+  文字列$x\in\binset^*$に対し$L(x)\in\binset$を, $x\in L$かどうかの指示関数, すなわち$x\in L$ならば$L(x)=1$, そうでなければ$L(x)=0$と定義する.
+\end{definition}
+
+次に乱択アルゴリズムについて定義する. 端的に言えばアルゴリズムの内部でコイントスを行うものを乱択アルゴリズムという.
+ここでは明示的にランダムシードを受け取るアルゴリズムを乱択アルゴリズムと呼ぶことにする.
+
+\begin{definition}{乱択アルゴリズム}{randomized-algorithm}
+  アルゴリズム$A(x;r)$は, 入力$x\in\binset^*$とは別にランダムシードと呼ばれる別の文字列$r\in\binset^*$を受け取るとき, \emph{乱択アルゴリズム}という.
+  特に, 任意の$x,r\in\binset^*$に対して$A(x;r)$は有限時間で停止するとし, その計算量は$\abs{x}$のみに依存する関数で表せるとする.
+  このとき, ランダムシード$r$の長さを常に$A$の計算量で上から抑える.
+  すなわち, $A$の計算量が$T(n)$であるとき, 十分大きな全ての$n\in\Nat$と全ての$x\in\binset^n$に対して$A$が読み込む$r$の文字数は高々$T(n)$であるため, $r\in \binset^{T(n)}$であると仮定する.
+
+  乱択アルゴリズムのランダムシードに関する確率, 期待値, 分散を議論する際は記号として$\Pr_{A}[\cdot],\E_A[\cdot],\Var_A[\cdot]$を用いる.
+  乱択アルゴリズム$A$が判定問題$L$を解くとは,
+  \begin{align*}
+    \Pr_A[A(x;r)=L(x)]\geq 2/3
+  \end{align*}
+  が成り立つことをいう.
+\end{definition}
+
+\section{検証の計算量}
+このノートでは主に検証の計算量について考える.
+検証とは, ある命題が真であると主張する証明が文字列として与えられたとき, その証明が実際に
+その命題を正しく証明しているかどうかを判定する問題である.
+数学の証明の査読業務をイメージしてもらうとわかりやすいだろう.
+ただしここで扱う「命題」とは, 一般の数学の命題ではなく, 例えば「特定のグラフ$G$は3彩色を持つ」「線形方程式系$Ax=b$は解を持つ」といった, 具体的な問題例を考える.
+
+フォーマルに議論するため, 検証の概念を導入する.
+
+例えば, グラフ$G$が3彩色を持つかどうかという問題は, 3彩色問題と呼ばれる判定問題であり,
+判定問題$f\colon\binset^*\to\binset$を考える.\footnote{$\binset^*=\bigcup_{n\in\Nat}\binset^n$は有限長の二進文字列全体. 判定問題とは, 文字列が与えられたときにYesまたはNoを答える問題である.}
+検証では\emph{検証者(verifier)}と呼ばれるアルゴリズム$\Ver(x)$を考える.
+このアルゴリズムは入力として
+
+\subsection{効率的な検証とクラスNP}
+\subsection{確率的な検証とクラスMA}
+\subsection{局所的な検証とクラスPCP}
 
 \section{PCP定理}
 
@@ -18,7 +71,3 @@ PCP定理は1998年に\citet{AroraS98,AroraLMSS98}によって証明された.
 \begin{theorem}{PCP定理}{PCPtheorem}
   ...
 \end{theorem}
-
-
-\section{制約充足問題(CSP)}
-\subsection{充足可能性判定問題(SAT)}
