--- a/preface.tex
+++ b/preface.tex
@@ -1,3 +1,15 @@
 \chapter*{序文}
 
-このノートは、PCP定理とその証明についての講義ノートです。PCP定理は、計算複雑性理論において、多くの問題において、計算量の上界と下界が一致することを示すための基本的な道具となっています。このノートでは、PCP定理の証明を、その背後にある概念を丁寧に説明しながら、できるだけ初等的に説明します。また、PCP定理の証明を理解するために必要な基本的な概念についても解説します。
+
+
+このノートは, 計算量理論で90年代に証明された重要な結果であるPCP定理とその証明についての講義ノートである.
+計算量(computational complexity)とは, 問題を解くために必要な計算リソースの量(例えば計算時間, 記憶領域のサイズ, 乱択や量子性の有無や量)を意味し, 計算量理論(computational complexity theory)とはそれぞれの問題の計算量を明らかにするための理論である.
+PCP定理とは, 判定問題(YesかNoで答える問題)の検証に要する計算量に関する結果であり,
+端的に言うと, ある命題が真であると主張する証明が文字列として与えられたとき,
+その証明を検証するためには, 通常, 全ての文字を見て確認する必要があるが,
+PCP定理によれば, その証明の一部だけを見ることで, その命題が真であるか否かを確率的に検証することができるという驚くべき結果である.
+例えば, ある実行列$A$と実ベクトル$b$に対して線形方程式系$Ax=b$は解を持つ, という命題を考えてみよう.
+この命題が真であるならば実際に解の一つ$x$を証明として提示することができるが, その証明が正しいかどうかを検証するためには検証者は$Ax$を実際に計算し, その各成分が$b$と一致するかを確認する必要がある.
+ところがPCP定理によれば, 巧妙に構成された証明$\pi$を提示することにより, その証明$\pi$全ての文字を見ることなく, 99\%の確率で正しく検証できるのである (ここでは確率的な検証, つまり検証者はランダムネスを用いた検証を行う設定を考える).
+
+このように, 局所的な情報だけを使って全体の構造を推測できるというPCP定理の性質は, 単に理論的に興味深いだけでなく, 誤り訂正符号の構成, 確率論的手法の脱乱択化, 最適化問題の近似率限界の導出など, 理論計算機科学において広大な応用を持つ.
