--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,9 @@
 \input{preface.tex}
 \addcontentsline{toc}{chapter}{Preface}
 \input{introduction.tex}
+\input{CSP.tex}
+\input{gap_amplification.tex}
+\input{alphabet_reduction.tex}
 %\input{error-correcting code.tex}
 %\input{expander graph.tex}
 %\input{HDX.tex}
