不要な章「エクスパンダーグラフ」と「誤り訂正符号」を削除し、計算量理論のセクションタイトルを「復習」に変更。新しいパッケージ「physics」を追加。

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath,amssymb,amsfonts,mathtools,amsthm}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{tcolorbox,todonotes}
+\usepackage{physics}
 %\usepackage{slashbox}
 %\usepackage{wrapfig}
 %\usepackage{url,xspace,ascmac}
