--- a/commands.tex
+++ b/commands.tex
@@ -1,15 +1,6 @@
 \newcommand{\defeq}{\mathrel{:=}}
-\DeclarePairedDelimiter{\abs}{\lvert}{\rvert} % | | absolute value
-\DeclarePairedDelimiter{\norm}{\lVert}{\rVert} % || || norm
-\DeclarePairedDelimiter{\rbra}{\lparen}{\rparen} % () round brackets
-\DeclarePairedDelimiter{\cbra}{\lbrace}{\rbrace} % {} curly brackets
-\DeclarePairedDelimiter{\sbra}{\lbrack}{\rbrack} % [] square brackets
-\DeclarePairedDelimiter{\abra}{\langle}{\rangle} % < > angle brackets
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor} % floor function
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil} % ceil function
-
-\DeclareMathOperator*{\Epi}{\mathbf{E}_{\pi}}
-\DeclareMathOperator*{\Varpi}{\mathbf{Var}_{\pi}}
 
 \newcommand{\Ver}{\mathrm{Ver}}
 
@@ -23,21 +14,9 @@
 \DeclareMathOperator*{\E}{\mathbb{E}}
 \DeclareMathOperator*{\Var}{\mathbf{Var}}
 \newcommand{\dtv}{d_{\mathrm{TV}}}
-\newcommand{\vG}{\vec{G}}
-\newcommand{\tmix}{t_{\mathrm{mix}}}
-\newcommand{\LSRW}{\mathrm{LSRW}}
-\newcommand{\SRW}{\mathrm{SRW}}
-\newcommand{\WSRW}{\mathrm{WSRW}}
-\newcommand{\LWSRW}{\mathrm{LWSRW}}
 \newcommand{\F}{\mathbb{F}}
-\newcommand{\piprod}[1]{\abra*{#1}_{\pi}}
-\newcommand{\pinorm}[1]{\norm*{#1}_{\pi}}
-\newcommand{\piorth}{\bot_{\pi}}
-\newcommand{\pispace}{\ell^2_\pi(V)}
-\newcommand{\pimin}{\pi_{\min}}
 \newcommand{\diam}{\mathrm{diam}}
 \newcommand{\Fq}{\mathbb{F}_q}
-\newcommand{\calG}{\mathcal{G}}
 \newcommand{\dist}{\mathrm{dist}}
 \newcommand{\Nat}{\mathbb{N}}
 \newcommand{\Real}{\mathbb{R}}
@@ -45,28 +24,41 @@
 \newcommand{\Comp}{\mathbb{C}}
 \newcommand{\binset}{\{0,1\}}
 \newcommand{\supp}{\mathsf{supp}\xspace}
-\renewcommand{\vec}[1]{\mathbf{#1}}
 \renewcommand{\emph}[1]{\textbf{#1}}
 \newcommand{\allone}{\mathbf{1}}
-\newcommand{\Code}{\mathcal{C}}
 \newcommand{\Cay}{\mathrm{Cay}}
 
-\newcommand{\Pup}{P^{\uparrow}}
-\newcommand{\Pdown}{P^{\downarrow}}
-\newcommand{\PUD}{P^{\land}}
-\newcommand{\PDU}{P^{\vee}}
-
-\newcommand{\rank}{\mathrm{rank}}
-\DeclareMathOperator{\Span}{span}
 \DeclareMathOperator\polylog{polylog}
 
 \newcommand{\poly}{\mathrm{poly}}
-\newcommand{\Spec}{\mathrm{Spec}}
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
 \newcommand{\Had}{\mathrm{Had}}
-\newcommand{\edges}{\mathrm{edges}}
-\newcommand{\disagree}{\mathrm{disagree}}
-\newcommand{\prej}{p_{\mathrm{rej}}}
 \newcommand{\restr}[1]{|_{#1}}
-\newcommand{\Algo}{\mathcal{A}}
+
+\newcommand{\calA}{\mathcal{A}}
+\newcommand{\calB}{\mathcal{B}}
+\newcommand{\calC}{\mathcal{C}}
+\newcommand{\calD}{\mathcal{D}}
+\newcommand{\calE}{\mathcal{E}}
+\newcommand{\calF}{\mathcal{F}}
+\newcommand{\calG}{\mathcal{G}}
+\newcommand{\calH}{\mathcal{H}}
+\newcommand{\calI}{\mathcal{I}}
+\newcommand{\calJ}{\mathcal{J}}
+\newcommand{\calK}{\mathcal{K}}
+\newcommand{\calL}{\mathcal{L}}
+\newcommand{\calM}{\mathcal{M}}
+\newcommand{\calN}{\mathcal{N}}
+\newcommand{\calO}{\mathcal{O}}
+\newcommand{\calP}{\mathcal{P}}
+\newcommand{\calQ}{\mathcal{Q}}
+\newcommand{\calR}{\mathcal{R}}
+\newcommand{\calS}{\mathcal{S}}
+\newcommand{\calT}{\mathcal{T}}
+\newcommand{\calU}{\mathcal{U}}
+\newcommand{\calV}{\mathcal{V}}
+\newcommand{\calW}{\mathcal{W}}
+\newcommand{\calX}{\mathcal{X}}
+\newcommand{\calY}{\mathcal{Y}}
+\newcommand{\calZ}{\mathcal{Z}}
