計算量理論の章を更新し、PCP定理の導入部分を詳細化
- 計算量理論の定義を拡張し、オーダー記法や多項式時間アルゴリズムの説明を追加
- クラスPの定義を導入
- 局所的な検証とクラスPCPのセクションを詳細化
- 文献情報にAKS04の論文を追加
- 定理と例の環境を拡張

--- a/commands.tex
+++ b/commands.tex
@@ -28,9 +28,8 @@
 \newcommand{\allone}{\mathbf{1}}
 \newcommand{\Cay}{\mathrm{Cay}}
 
-\DeclareMathOperator\polylog{polylog}
+\newcommand{\PRIMES}{\mathrm{PRIMES}}
 
-\newcommand{\poly}{\mathrm{poly}}
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
 \newcommand{\Had}{\mathrm{Had}}
