--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,8 @@
 %\usepackage{algorithmic}
 \usepackage[normalem]{ulem}
 \usepackage{comment,tikz}
+\usepackage{complexity}
+\let\E\undefined
 %\usepackage{todonotes}
 %\usepackage{thmtools,thm-restate}
 %\usepackage{enumitem}
