--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,20 @@
+@ARTICLE{AKS04,
+  title        = {{PRIMES} is in {P}},
+  author       = {Agrawal, Manindra and Kayal, Neeraj and Saxena, Nitin},
+  journaltitle = {Annals of mathematics},
+  publisher    = {Annals of Mathematics},
+  volume       = {160},
+  issue        = {2},
+  pages        = {781--793},
+  date         = {2004-09-01},
+  doi          = {10.4007/annals.2004.160.781},
+  issn         = {0003-486X,1939-8980},
+  url          = {https://doi.org/10.4007/annals.2004.160.781},
+  urldate      = {2025-02-28},
+  language     = {en}
+}
+
+
 @ARTICLE{Din07,
   title        = {The {PCP} theorem by gap amplification},
   author       = {Dinur, Irit},
