--- a/commands.tex
+++ b/commands.tex
@@ -29,6 +29,7 @@
 \newcommand{\Cay}{\mathrm{Cay}}
 
 \newcommand{\PRIMES}{\mathrm{PRIMES}}
+\newcommand{\ThreeCOL}{\mathrm{3COL}}
 
 \newcommand{\RS}{\mathrm{RS}}
 \newcommand{\RM}{\mathrm{RM}}
