--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{amsmath,amssymb,amsfonts,mathtools,amsthm}
 \usepackage[dvipdfmx]{graphicx}
-\usepackage{tcolorbox,todonotes}
+\usepackage{tcolorbox}
 \usepackage{physics}
 %\usepackage{slashbox}
 %\usepackage{wrapfig}
