--- a/CSP.tex
+++ b/CSP.tex
@@ -18,7 +18,7 @@ PCP定理の証明においても中心的な役割を果たす.
 入力$(X,\Sigma,\calI,\calC)$は,
 ある変数への割り当て$(a_1,\dots,a_n)\in\Sigma^n$が存在して, 任意の$i\in[m]$について$c_i(a_{I_i})=1$であるとき, かつその時に限りYesインスタンスである.
 
-また, 全ての$i\in[m]$について$\abs{I_i}\le k$であるとき, このCSPは\emph{$k$-CSP}と呼ばれる.
+また, 全ての$i\in[m]$について$\abs{I_i}\le q$であるとき, このCSPは\emph{$q$-CSP}と呼ばれる.
 \end{definition}
 
 \begin{example}{グラフ彩色問題}{graph-coloring-problem-CSP}
@@ -41,7 +41,39 @@ PCP定理の証明においても中心的な役割を果たす.
 \end{example}
 
 \subsection{PCPとの関係}
+ランダムシード長$r=r(n)$かつクエリ数$q=O(1)$のPCP検証者は$\Sigma=\{0,1\}$の場合の$q$-CSPによって表現でき, 逆に$q$-CSPはPCP検証者として表現できる.
+実際, $q$クエリのPCP検証者$V^\pi(x)$を考えよう.
+証明の長さを$\abs{\pi}=\ell$とする.
+入力$x$とランダムシード$s$を固定したときの$V^\pi(x;s)$が
+証明中の読み込む文字のインデックスの集合を$I_s\subseteq[\ell]$とする (ここで$\abs{I_s}\le q$).
+このとき, $V^\pi(x;s)$は$\binset^{I_s}$を$\binset$に写す関数を定める.
+この関数を制約$c_s$とみなすことで, 検証者$V^\pi(x)$は$q$-CSPのインスタンスとして表現できる.
+このとき, $q$-CSPのインスタンスの変数集合は証明$\pi$に対応する.
+もし$x\in L$であるならば, 確率$1$で$V^\pi(x)=1$となるような$\pi$が存在する.
+つまり, 全てのランダムシード$s$に対して$V^\pi(x;s)=1$となるような$\pi$が存在するため,
+先ほど構成した$q$-CSPのインスタンスはYesインスタンスである.
+逆に$x\not\in L$であるならば, 全ての$\pi$に対して確率$1/3$以上で$V^\pi(x)=0$となる.
+これは, $q$-CSPインスタンスに対して, 全ての割り当てを考えても, 全体の制約のうち少なくとも$1/3$の割合は充足されないことを意味する.
+
+
+\begin{table}[htbp]
+  \centering
+  \begin{tabular}{|c|c|}
+    \hline
+    PCP検証者 & $q$-CSP \\
+    \hline
+    PCP $\pi$ & 割り当て \\
+    \hline
+    ランダムネスを固定した時の判定 & CSPの制約 \\
+    \hline
+  \end{tabular}
+  \caption{PCPとCSPの対応関係}
+  \label{table:pcp-csp-correspondence}
+\end{table}
+
 \subsection{制約グラフ}
+\cref{thm:3-coloring-problem-NP-complete}より, NP完全であるような2-CSPが存在する.
+そこで, 以後は2-CSPのみを考える.
 
 \section{PCP定理の証明の概要}
 
