--- a/commands.tex
+++ b/commands.tex
@@ -28,6 +28,8 @@
 \newcommand{\allone}{\mathbf{1}}
 \newcommand{\Cay}{\mathrm{Cay}}
 
+\newcommand{\val}{\mathrm{val}}
+
 \newcommand{\PRIMES}{\mathrm{PRIMES}}
 \newcommand{\ThreeCOL}{\mathrm{3COL}}
 
@@ -62,3 +64,57 @@
 \newcommand{\calX}{\mathcal{X}}
 \newcommand{\calY}{\mathcal{Y}}
 \newcommand{\calZ}{\mathcal{Z}}
+
+\newcommand{\bolda}{\boldsymbol{a}}
+\newcommand{\boldb}{\boldsymbol{b}}
+\newcommand{\boldc}{\boldsymbol{c}}
+\newcommand{\boldd}{\boldsymbol{d}}
+\newcommand{\bolde}{\boldsymbol{e}}
+\newcommand{\boldf}{\boldsymbol{f}}
+\newcommand{\boldg}{\boldsymbol{g}}
+\newcommand{\boldh}{\boldsymbol{h}}
+\newcommand{\boldi}{\boldsymbol{i}}
+\newcommand{\boldj}{\boldsymbol{j}}
+\newcommand{\boldk}{\boldsymbol{k}}
+\newcommand{\boldl}{\boldsymbol{l}}
+\newcommand{\boldm}{\boldsymbol{m}}
+\newcommand{\boldn}{\boldsymbol{n}}
+\newcommand{\boldo}{\boldsymbol{o}}
+\newcommand{\boldp}{\boldsymbol{p}}
+\newcommand{\boldq}{\boldsymbol{q}}
+\newcommand{\boldr}{\boldsymbol{r}}
+\newcommand{\bolds}{\boldsymbol{s}}
+\newcommand{\boldt}{\boldsymbol{t}}
+\newcommand{\boldu}{\boldsymbol{u}}
+\newcommand{\boldv}{\boldsymbol{v}}
+\newcommand{\boldw}{\boldsymbol{w}}
+\newcommand{\boldx}{\boldsymbol{x}}
+\newcommand{\boldy}{\boldsymbol{y}}
+\newcommand{\boldz}{\boldsymbol{z}}
+
+\newcommand{\veca}{\vec{a}}
+\newcommand{\vecb}{\vec{b}}
+\newcommand{\vecc}{\vec{c}}
+\newcommand{\vecd}{\vec{d}}
+\newcommand{\vece}{\vec{e}}
+\newcommand{\vecf}{\vec{f}}
+\newcommand{\vecg}{\vec{g}}
+\newcommand{\vech}{\vec{h}}
+\newcommand{\veci}{\vec{i}}
+\newcommand{\vecj}{\vec{j}}
+\newcommand{\veck}{\vec{k}}
+\newcommand{\vecl}{\vec{l}}
+\newcommand{\vecm}{\vec{m}}
+\newcommand{\vecn}{\vec{n}}
+\newcommand{\veco}{\vec{o}}
+\newcommand{\vecp}{\vec{p}}
+\newcommand{\vecq}{\vec{q}}
+\newcommand{\vecr}{\vec{r}}
+\newcommand{\vecs}{\vec{s}}
+\newcommand{\vect}{\vec{t}}
+\newcommand{\vecu}{\vec{u}}
+\newcommand{\vecv}{\vec{v}}
+\newcommand{\vecw}{\vec{w}}
+\newcommand{\vecx}{\vec{x}}
+\newcommand{\vecy}{\vec{y}}
+\newcommand{\vecz}{\vec{z}}
