--- a/commands.tex
+++ b/commands.tex
@@ -29,6 +29,7 @@
 \newcommand{\Cay}{\mathrm{Cay}}
 
 \newcommand{\val}{\mathrm{val}}
+\renewcommand{\epsilon}{\varepsilon}
 
 \newcommand{\PRIMES}{\mathrm{PRIMES}}
 \newcommand{\ThreeCOL}{\mathrm{3COL}}
