--- a/ref.bib
+++ b/ref.bib
@@ -61,3 +61,62 @@
   issn         = {0004-5411},
   url          = {https://doi.org/10.1145/278298.278306}
 }
+
+@ARTICLE{BenSasson06,
+  title        = {Short {PCP}s with polylog query complexity},
+  author       = {Ben-Sasson, Eli and Sudan, Madhu},
+  journaltitle = {Proceedings of the thirty-eighth annual ACM symposium on Theory of computing},
+  publisher    = {ACM},
+  pages        = {266--275},
+  date         = {2006},
+  doi          = {10.1145/1132516.1132556}
+}
+
+@ARTICLE{DinurHarsha13,
+  title        = {Composition of low-error 2-query {PCP}s using decodable {PCP}s},
+  author       = {Dinur, Irit and Harsha, Prahladh},
+  journaltitle = {SIAM Journal on Computing},
+  publisher    = {SIAM},
+  volume       = {42},
+  number       = {6},
+  pages        = {2452--2486},
+  date         = {2013},
+  doi          = {10.1137/120875636}
+}
+
+@ARTICLE{Guruswami20,
+  title        = {Constant rate {PCP}s for circuit-{SAT} with sublinear query complexity},
+  author       = {Guruswami, Venkatesan and Harsha, Prahladh and Sudan, Madhu and Zhou, Santhoshini},
+  journaltitle = {Proceedings of the 52nd Annual ACM SIGACT Symposium on Theory of Computing},
+  publisher    = {ACM},
+  pages        = {9--20},
+  date         = {2020},
+  doi          = {10.1145/3357713.3384244}
+}
+
+@ARTICLE{Gur24,
+  title        = {Perfect Zero Knowledge: New Upper Bounds and Relativized Separations},
+  author       = {Gur, Tom and Liu, Tianyi and Rothblum, Ron D},
+  journaltitle = {arXiv preprint arXiv:2401.00001},
+  date         = {2024}
+}
+
+@ARTICLE{Abboud17,
+  title        = {Fine-grained reductions from approximate counting to decision},
+  author       = {Abboud, Amir and Rubinstein, Aviad and Williams, Ryan},
+  journaltitle = {Proceedings of the 49th Annual ACM SIGACT Symposium on Theory of Computing},
+  publisher    = {ACM},
+  pages        = {281--290},
+  date         = {2017},
+  doi          = {10.1145/3055399.3055400}
+}
+
+@ARTICLE{Chen19,
+  title        = {Fine-grained complexity meets {IP}={PSPACE}},
+  author       = {Chen, Lijie and Williams, Ryan},
+  journaltitle = {Proceedings of the Thirtieth Annual ACM-SIAM Symposium on Discrete Algorithms},
+  publisher    = {SIAM},
+  pages        = {1--20},
+  date         = {2019},
+  doi          = {10.1137/1.9781611975482.1}
+}
